# mavsdk_drone_show

./: .gitignore  AGENTS.md  BACKEND_ANALYSIS_REPORT.md  BACKEND_FASTAPI_MIGRATION_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DISCLAIMER.md  ETHICAL-USE.md  FLIGHT_MODE_FIX_README.md  GCS_SERVER_MIGRATION_PLAN.md  GEMINI.md  HANDOVER_TO_LOCAL_AGENT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE-COMMERCIAL.md  LICENSE-NONCOMMERCIAL.md  LICENSE-SMALL-BUSINESS.md  Makefile  NOTICE  PR_MERGE_INSTRUCTIONS.md  README.md  ROADMAP.md  ROBUSTNESS_SUMMARY.md  SECURITY.md  actions.py  common_params.csv  commuincation_handling.py  config.csv  config.json  config.py  config_4vmware.csv  config_docker.csv  config_sitl.csv  coordinator.py  csvCreator.py  debug_gcs_test.py  drone_communication.py  drone_communicator.py  drone_config.py  (+40 more)
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md
app/: linux_dashboard_start.sh  win_dashboard_start.bat
class/: drone.py
config/: agent_assistant.yaml  agent_general_knowledge.yaml  agent_policy.yaml  agent_provider_smoke.yaml  agent_public_places.yaml  agent_query_adaptation.yaml  agent_tools.yaml
data/: origin.json  origin.sitl.default.json
deployment/: defaults.env
docs/: CONFIG_CSV_MIGRATION_GUIDE.md  QUICK_REFERENCE.md  README.md  TODO_deferred.md  VERSIONING.md  advanced_deployment.md  advanced_sitl.md  build_custom_image.md  configuration_architecture.md  control-modes-and-coordinates.md  px4-parameters.md  quickscout.md  sitl_demo_docker.md  v07_doc.html  v08_doc_server.html  v2.0_doc_server.html  v2.0_doc_sitl_demo.md  (+1 more)
(+1578 files in other folders)
