[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mavsdk-drone-show"
dynamic = ["version", "dependencies"]
description = "MAVSDK Drone Show System"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.3.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "functions*", "gcs-server*", "mds_logging*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.csv", "*.yaml"]

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}
dependencies = {file = ["requirements.txt"]}
